--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,9 @@
 #!/usr/bin/env bash
 
+for file in nix/repo/**/* flake.*; do
+  watch_file "${file}"
+done
+
 if type -P lorri &>/dev/null; then
   eval "$(lorri direnv)"
 elif type -v nix &>/dev/null; then
