[packages/lint-go] Allow script to take arguments

--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 for file in nix/repo/**/* flake.*; do
-  watch_file "${file}"
+  watch_file "$file"
 done
 
 if type -P lorri &>/dev/null; then
