--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -11,19 +11,16 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       # setup
-      - uses: "webfactory/ssh-agent@v0.9.0"
-        with:
-          ssh-private-key: "${{ secrets.SSH_PRIVATE_KEY }}"
-      - uses: "actions/checkout@v4"
-      - uses: "DeterminateSystems/nix-installer-action@v16"
+      - uses: "actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683" # v4
+      - uses: "DeterminateSystems/nix-installer-action@ve50d5f73bfe71c2dd0aa4218de8f4afa59f8f81d" # v16
         with:
           diagnostic-endpoint: ""
-      - uses: "DeterminateSystems/magic-nix-cache-action@v8"
+      - uses: "DeterminateSystems/magic-nix-cache-action@6221693898146dc97e38ad0e013488a16477a4c4" # v9
         with:
           diagnostic-endpoint: ""
       - name: "Print flake metadata"
         run: "nix flake metadata"
-      - uses: "DeterminateSystems/flake-checker-action@v9"
+      - uses: "DeterminateSystems/flake-checker-action@078f5f7f47ee188aa6cb472527ca5984e195222d" # v9
         with:
           fail-mode: true
           ignore-missing-flake-lock: false
